--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastmcp>=2.14.1",
     "minsearch>=0.0.7",
+    "pandas>=2.3.3",
     "requests>=2.32.5",
+    "scikit-learn>=1.8.0",
 ]
